bump minimum Java to 17